--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ workflows:
           env_name: dev
           requires:
             - dev_deployment_eks
-            - build_dev_ui      
+            # - build_dev_ui      
 
       - approve_to_deploy:
           name: approve_test_deployment_eks
@@ -186,70 +186,70 @@ workflows:
             branches:
               only: master
 
-      - db_migrate_aws:
-          name: migrate_test_aws
-          db_name: ${TEST_DB_NAME}
-          requires:
-            - approve_test_deployment_eks
+      # - db_migrate_aws:
+      #     name: migrate_test_aws
+      #     db_name: ${TEST_DB_NAME}
+      #     requires:
+      #       - approve_test_deployment_eks
 
-      - build_ui_push_to_s3:
-          name: build_test_ui
-          env_name: test
-          distributionId: ${TEST_DISTRIBUTION_ID}
-          requires:
-            - push_test_image
+      # - build_ui_push_to_s3:
+      #     name: build_test_ui
+      #     env_name: test
+      #     distributionId: ${TEST_DISTRIBUTION_ID}
+      #     requires:
+      #       - push_test_image
 
-      - aws-ecr/build-and-push-image:
-          name: push_test_image
-          repo: ${REPO}
-          tag: test
-          requires:
-            - migrate_test_aws
+      # - aws-ecr/build-and-push-image:
+      #     name: push_test_image
+      #     repo: ${REPO}
+      #     tag: test
+      #     requires:
+      #       - migrate_test_aws
 
-      - eks_fargate_deployment:
-          name: test_deployment_eks
-          cluster-name: ${CLUSTER_NAME}
-          env-name: test
-          requires:
-            - push_test_image
+      # - eks_fargate_deployment:
+      #     name: test_deployment_eks
+      #     cluster-name: ${CLUSTER_NAME}
+      #     env-name: test
+      #     requires:
+      #       - push_test_image
 
-      - run_functional_tests:
-          name: functional_tests_test
-          env_name: test
-          requires:
-            - test_deployment_eks
-            - build_test_ui
+      # - run_functional_tests:
+      #     name: functional_tests_test
+      #     env_name: test
+      #     requires:
+      #       - test_deployment_eks
+      #       - build_test_ui
 
-      - approve_to_deploy:
-          name: approve_prod_deployment_eks
-          type: approval
-          requires:
-            - functional_tests_test
+      # - approve_to_deploy:
+      #     name: approve_prod_deployment_eks
+      #     type: approval
+      #     requires:
+      #       - functional_tests_test
 
-      - db_migrate_aws:
-          name: migrate_prod_aws
-          db_name: ${DB_NAME}
-          requires:
-            - approve_prod_deployment_eks
+      # - db_migrate_aws:
+      #     name: migrate_prod_aws
+      #     db_name: ${DB_NAME}
+      #     requires:
+      #       - approve_prod_deployment_eks
 
-      - build_ui_push_to_s3:
-          name: build_prod_ui
-          env_name: prod
-          distributionId: ${PROD_DISTRIBUTION_ID}
-          requires:
-            - push_prod_image
+      # - build_ui_push_to_s3:
+      #     name: build_prod_ui
+      #     env_name: prod
+      #     distributionId: ${PROD_DISTRIBUTION_ID}
+      #     requires:
+      #       - push_prod_image
 
-      - aws-ecr/build-and-push-image:
-          name: push_prod_image
-          repo: ${REPO}
-          tag: prod
-          requires:
-            - migrate_prod_aws
+      # - aws-ecr/build-and-push-image:
+      #     name: push_prod_image
+      #     repo: ${REPO}
+      #     tag: prod
+      #     requires:
+      #       - migrate_prod_aws
 
-      - eks_fargate_deployment:
-          name: prod_deployment_eks
-          cluster-name: ${CLUSTER_NAME}
-          env-name: prod
-          requires:
-            - push_prod_image
+      # - eks_fargate_deployment:
+      #     name: prod_deployment_eks
+      #     cluster-name: ${CLUSTER_NAME}
+      #     env-name: prod
+      #     requires:
+      #       - push_prod_image
             
